# unattended-object-detection

./: .gitignore  .gitignore.txt  README.md  app.py  config.py  config_example.yaml  export_rtdetr.py  pyproject.toml  requirements.txt  setup.sh  tensorrt_inference.py  test_system.py  utils.py
