[project]
name = "krishna-unattended"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deep-sort-realtime>=1.3.2",
    "numpy>=2.3.3",
    "onnx>=1.19.0",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.11.0.86",
    "torch>=2.8.0",
    "ultralytics>=8.3.200",
]
